# RAGAnchor

./: .gitignore  README.md  pyproject.toml
experiments/: ablate.py  ablate_cad.py  ablate_gate.py  ablate_prune.py  inspect_cad.py  inspect_examples.py  tune_gate.py  validate_judge.py
scripts/: download_ragtruth.py
src/raganchor/: cli.py  config.py  data.py  gate.py  llm.py  rag.py  retrieval.py
src/raganchor/eval/: harness.py  judge.py  metrics.py  nli.py
src/raganchor/models/: llm.py
src/raganchor/pipeline/: vanilla.py
src/raganchor/retrieval/: hybrid.py
