[project]
name = "raganchor"
version = "0.1.0"
description = "RAGAnchor — production agentic RAG on a small local model + a 'what sticks' faithfulness/efficiency study"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.5,<2.7",
    "transformers>=4.46",
    "accelerate>=1.1",
    "bitsandbytes>=0.44",
    "sentence-transformers>=3.3",
    "rank-bm25>=0.2.2",
    "datasets>=3.1",
    "huggingface-hub>=0.26",
    "numpy>=1.26,<2.2",
    "scipy>=1.14",
    "typer>=0.13",
    "rich>=13.9",
    "pydantic>=2.9",
]

[project.scripts]
raganchor = "raganchor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raganchor"]

[tool.uv]
# torch must come from the CUDA 12.4 wheel index, not PyPI's CPU build.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[tool.ruff]
line-length = 100
target-version = "py312"
